# Contract-Audit-Pipeline

./: README.md  docker-compose.yaml
python-pipeline/: .env  .gitignore  pyproject.toml  requirements.txt
python-pipeline/app/config/: settings.py
python-pipeline/app/db/23504ed6-220c-44e5-9249-12a8f0a6aca4/: index_metadata.pickle
python-pipeline/app/models/: schemas.py
python-pipeline/app/output_md/: violation-policy1.md  violation-policy2.md  violation-policy3.md  violation-policy4.md
python-pipeline/app/scripts/: ingest_policies.py  pdf_converter.py
python-pipeline/app/services/: chunker.py  embedder.py  retriever.py
spring-backend/: pom.xml
spring-backend/src/main/java/com/project/contract_audit/: ContractAuditApplication.java
spring-backend/src/main/resources/: application.yaml
spring-backend/src/test/java/com/project/contract_audit/: ContractAuditApplicationTests.java
